@@ -107,7 +107,7 @@ cmd.tomcat.val.command=Action to perform ( START | STOP )
 cmd.uninstall=Uninstall selected tool(s).
 cmd.uninstall-plugin=Uninstall the selected plugin for the selected tool.
 cmd.uninstall-plugin.detail=Plugins can be only installed or uninstalled for tools that support such. Using the command "ide install-plugin", an uninstalled plugin can be restored.
-cmd.uninstall.detail=Can be used to uninstall selected tool(s). E.g. to uninstall java simply call 'ide uninstall java'. To uninstall IDEasy itself, run 'ide uninstall' without further arguments.
+cmd.uninstall.detail=Can be used to uninstall selected tool(s). E.g. to uninstall java simply call 'ide uninstall java'. To uninstall IDEasy itself, run 'ide uninstall' without further arguments. To fully delete the selected tool from your machine, use force mode. E.g. 'ide --force uninstall java'.
 cmd.update=Pull your settings and apply updates (software, configuration and repositories).
 cmd.update.detail=To update your IDE (if instructed by your ide-admin), you only need to run the following command: 'ide update'.
 cmd.upgrade=Upgrade the version of IDEasy to the latest version available.
