@@ -1,18 +1,21 @@
 package com.devonfw.tools.ide.commandlet;
 
 import java.nio.file.Files;
+import java.nio.file.Path;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
 import com.devonfw.tools.ide.context.AbstractIdeContextTest;
+import com.devonfw.tools.ide.context.IdeContext;
 import com.devonfw.tools.ide.context.IdeTestContext;
 import com.devonfw.tools.ide.log.IdeLogEntry;
 import com.devonfw.tools.ide.os.SystemInfo;
 import com.devonfw.tools.ide.os.SystemInfoMock;
 import com.devonfw.tools.ide.os.WindowsHelper;
 import com.devonfw.tools.ide.property.ToolProperty;
+import com.devonfw.tools.ide.tool.az.Azure;
 import com.devonfw.tools.ide.tool.dotnet.DotNet;
 import com.devonfw.tools.ide.tool.eclipse.Eclipse;
 import com.devonfw.tools.ide.tool.npm.Npm;
@@ -22,6 +25,22 @@ import com.devonfw.tools.ide.variable.IdeVariables;
  * Integration test of {@link UninstallCommandlet}.
  */
 public class UninstallCommandletTest extends AbstractIdeContextTest {
+
+  private static final String PROJECT = "edition-version-get-uninstall";
+
+  /**
+   * Mocks the installation of a tool, since forceUninstall depends on symlinks which are not distributed with git
+   *
+   * @param context the {@link IdeContext} to use.
+   * @param tool the tool to mock installation of.
+   */
+  private static void mockInstallTool(IdeTestContext context, String tool) {
+
+    Path pathToInstallationOfDummyTool = context.getSoftwareRepositoryPath()
+        .resolve(context.getDefaultToolRepository().getId()).resolve(tool).resolve(tool + "/testVersion");
+    Path pathToLinkedSoftware = context.getSoftwarePath().resolve(tool);
+    context.getFileAccess().symlink(pathToInstallationOfDummyTool, pathToLinkedSoftware);
+  }
 
   /**
    * Test of {@link UninstallCommandlet} run.
@@ -82,6 +101,35 @@ public class UninstallCommandletTest extends AbstractIdeContextTest {
     uninstallCommandlet.run();
     //assert
     assertThat(context).log().hasEntries(IdeLogEntry.ofSuccess("Successfully uninstalled npm"));
+  }
+
+  /** Test of {@link UninstallCommandlet} run with --force. */
+  @ParameterizedTest
+  @ValueSource(strings = { "windows", "mac", "linux" })
+  public void testForceUninstallAzure(String os) {
+
+    // arrange
+    SystemInfo systemInfo = SystemInfoMock.of(os);
+    String tool = "az";
+    IdeTestContext context = newContext(PROJECT, null, true);
+    context.setSystemInfo(systemInfo);
+    mockInstallTool(context, tool);
+    CommandletManager commandletManager = context.getCommandletManager();
+    UninstallCommandlet uninstallCommandlet = commandletManager.getCommandlet(UninstallCommandlet.class);
+    Azure azureCommandlet = commandletManager.getCommandlet(Azure.class);
+    uninstallCommandlet.tools.addValue(azureCommandlet);
+    uninstallCommandlet.tools.setValueAsString(tool, context);
+    context.getStartContext().setForceMode(true);
+
+    // act
+    uninstallCommandlet.run();
+    // assert
+    assertThat(context).log()
+        .hasEntries(IdeLogEntry.ofSuccess("Successfully deleted " + context.getSoftwareRepositoryPath()
+            .resolve(context.getDefaultToolRepository().getId()).resolve(tool).resolve(tool + "/testVersion") + " from your computer."));
+    assertThat(context).log().hasEntries(IdeLogEntry.ofSuccess("Successfully uninstalled " + tool));
+    assertThat(context.getSoftwareRepositoryPath()
+        .resolve(context.getDefaultToolRepository().getId()).resolve(tool).resolve(tool + "/testVersion")).doesNotExist();
   }
 
   /** Test {@link UninstallCommandlet} without arguments uninstalls IDEasy. */
